@@ -171,7 +171,7 @@
 <p>Find pairs of measurements that match in time and geolocation for two sets of
 HARP compliant netCDF files.</p>
 <div class="highlight-default"><div class="highlight"><pre><span></span><span class="n">Usage</span><span class="p">:</span>
-    <span class="n">harpcollocate</span> <span class="p">[</span><span class="n">options</span><span class="p">]</span> <span class="o">&lt;</span><span class="n">path_a</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">path_b</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">outputpath</span><span class="o">&gt;</span>
+    <span class="n">harpcollocate</span> <span class="p">[</span><span class="n">options</span><span class="p">]</span> <span class="o">&lt;</span><span class="n">path</span><span class="o">-</span><span class="n">a</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">path</span><span class="o">-</span><span class="n">b</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">outputpath</span><span class="o">&gt;</span>
         <span class="n">Find</span> <span class="n">matching</span> <span class="n">sample</span> <span class="n">pairs</span> <span class="n">between</span> <span class="n">two</span> <span class="n">datasets</span> <span class="n">of</span> <span class="n">HARP</span> <span class="n">files</span><span class="o">.</span>
         <span class="n">The</span> <span class="n">path</span> <span class="k">for</span> <span class="n">a</span> <span class="n">dataset</span> <span class="n">can</span> <span class="n">be</span> <span class="n">either</span> <span class="n">a</span> <span class="n">single</span> <span class="n">file</span> <span class="ow">or</span> <span class="n">a</span> <span class="n">directory</span>
         <span class="n">containing</span> <span class="n">files</span><span class="o">.</span> <span class="n">The</span> <span class="n">result</span> <span class="n">will</span> <span class="n">be</span> <span class="n">write</span> <span class="k">as</span> <span class="n">a</span> <span class="n">comma</span> <span class="n">separate</span> <span class="n">value</span>
@@ -206,23 +206,23 @@ HARP compliant netCDF files.</p>
             <span class="o">-</span><span class="n">ny</span> <span class="o">&lt;</span><span class="n">diffvariable</span><span class="o">&gt;</span>
                 <span class="n">Filter</span> <span class="n">collocation</span> <span class="n">pairs</span> <span class="n">such</span> <span class="n">that</span> <span class="k">for</span> <span class="n">each</span> <span class="n">sample</span> <span class="kn">from</span>
                 <span class="nn">dataset</span> <span class="n">B</span> <span class="n">only</span> <span class="n">the</span> <span class="n">neareset</span> <span class="n">sample</span> <span class="kn">from</span> <span class="nn">dataset</span> <span class="n">A</span> <span class="ow">is</span> <span class="n">kept</span><span class="o">.</span>
-            <span class="o">-</span><span class="n">oa</span><span class="p">,</span> <span class="o">--</span><span class="n">options_a</span> <span class="o">&lt;</span><span class="n">option</span> <span class="nb">list</span><span class="o">&gt;</span>
+            <span class="o">-</span><span class="n">oa</span><span class="p">,</span> <span class="o">--</span><span class="n">options</span><span class="o">-</span><span class="n">a</span> <span class="o">&lt;</span><span class="n">option</span> <span class="nb">list</span><span class="o">&gt;</span>
                 <span class="n">List</span> <span class="n">of</span> <span class="n">options</span> <span class="n">to</span> <span class="k">pass</span> <span class="n">to</span> <span class="n">the</span> <span class="n">ingestion</span> <span class="n">module</span> <span class="k">for</span> <span class="n">ingesting</span>
                 <span class="n">products</span> <span class="kn">from</span> <span class="nn">the</span> <span class="n">first</span> <span class="n">dataset</span><span class="o">.</span>
                 <span class="n">Only</span> <span class="n">applicable</span> <span class="k">if</span> <span class="n">the</span> <span class="nb">input</span> <span class="n">product</span> <span class="ow">is</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">HARP</span> <span class="nb">format</span><span class="o">.</span>
                 <span class="n">Options</span> <span class="n">are</span> <span class="n">separated</span> <span class="n">by</span> <span class="n">semi</span><span class="o">-</span><span class="n">colons</span><span class="o">.</span> <span class="n">Each</span> <span class="n">option</span> <span class="n">consists</span>
                 <span class="n">of</span> <span class="n">an</span> <span class="o">&lt;</span><span class="n">option</span> <span class="n">name</span><span class="o">&gt;=&lt;</span><span class="n">value</span><span class="o">&gt;</span> <span class="n">pair</span><span class="o">.</span> <span class="n">An</span> <span class="n">option</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span>
                 <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
-            <span class="o">-</span><span class="n">ob</span><span class="p">,</span> <span class="o">--</span><span class="n">options_b</span> <span class="o">&lt;</span><span class="n">option</span> <span class="nb">list</span><span class="o">&gt;</span>
+            <span class="o">-</span><span class="n">ob</span><span class="p">,</span> <span class="o">--</span><span class="n">options</span><span class="o">-</span><span class="n">b</span> <span class="o">&lt;</span><span class="n">option</span> <span class="nb">list</span><span class="o">&gt;</span>
                 <span class="n">List</span> <span class="n">of</span> <span class="n">options</span> <span class="n">to</span> <span class="k">pass</span> <span class="n">to</span> <span class="n">the</span> <span class="n">ingestion</span> <span class="n">module</span> <span class="k">for</span> <span class="n">ingesting</span>
                 <span class="n">products</span> <span class="kn">from</span> <span class="nn">the</span> <span class="n">second</span> <span class="n">dataset</span> <span class="p">(</span><span class="n">see</span> <span class="n">above</span><span class="p">)</span><span class="o">.</span>
-            <span class="o">-</span><span class="n">aa</span><span class="p">,</span> <span class="o">--</span><span class="n">operations_a</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
+            <span class="o">-</span><span class="n">aa</span><span class="p">,</span> <span class="o">--</span><span class="n">operations</span><span class="o">-</span><span class="n">a</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
                 <span class="n">List</span> <span class="n">of</span> <span class="n">operations</span> <span class="n">to</span> <span class="n">apply</span> <span class="n">to</span> <span class="n">each</span> <span class="n">product</span> <span class="n">of</span> <span class="n">the</span> <span class="n">first</span>
                 <span class="n">dataset</span> <span class="n">before</span> <span class="n">collocating</span><span class="o">.</span>
                 <span class="n">An</span> <span class="n">operation</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span> <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
                 <span class="n">See</span> <span class="n">the</span> <span class="s1">&#39;operations&#39;</span> <span class="n">section</span> <span class="n">of</span> <span class="n">the</span> <span class="n">HARP</span> <span class="n">documentation</span> <span class="k">for</span>
                 <span class="n">more</span> <span class="n">details</span><span class="o">.</span>
-            <span class="o">-</span><span class="n">ab</span><span class="p">,</span> <span class="o">--</span><span class="n">operations_b</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
+            <span class="o">-</span><span class="n">ab</span><span class="p">,</span> <span class="o">--</span><span class="n">operations</span><span class="o">-</span><span class="n">b</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
                 <span class="n">List</span> <span class="n">of</span> <span class="n">operations</span> <span class="n">to</span> <span class="n">apply</span> <span class="n">to</span> <span class="n">each</span> <span class="n">product</span> <span class="n">of</span> <span class="n">the</span> <span class="n">second</span>
                 <span class="n">dataset</span> <span class="n">before</span> <span class="n">collocating</span> <span class="p">(</span><span class="n">see</span> <span class="n">above</span><span class="p">)</span><span class="o">.</span>
         <span class="n">The</span> <span class="n">order</span> <span class="ow">in</span> <span class="n">which</span> <span class="o">-</span><span class="n">nx</span> <span class="ow">and</span> <span class="o">-</span><span class="n">ny</span> <span class="n">are</span> <span class="n">provided</span> <span class="n">determines</span> <span class="n">the</span> <span class="n">order</span> <span class="ow">in</span>
@@ -245,7 +245,7 @@ HARP compliant netCDF files.</p>
         <span class="n">The</span> <span class="n">order</span> <span class="ow">in</span> <span class="n">which</span> <span class="o">-</span><span class="n">nx</span> <span class="ow">and</span> <span class="o">-</span><span class="n">ny</span> <span class="n">are</span> <span class="n">provided</span> <span class="n">determines</span> <span class="n">the</span> <span class="n">order</span> <span class="ow">in</span>
         <span class="n">which</span> <span class="n">the</span> <span class="n">nearest</span> <span class="n">filters</span> <span class="n">are</span> <span class="n">executed</span><span class="o">.</span>
 
-    <span class="n">harpcollocate</span> <span class="o">--</span><span class="n">update</span> <span class="o">&lt;</span><span class="n">inputpath</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">path_a</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">path_b</span><span class="o">&gt;</span> <span class="p">[</span><span class="o">&lt;</span><span class="n">outputpath</span><span class="o">&gt;</span><span class="p">]</span>
+    <span class="n">harpcollocate</span> <span class="o">--</span><span class="n">update</span> <span class="o">&lt;</span><span class="n">inputpath</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">path</span><span class="o">-</span><span class="n">a</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">path</span><span class="o">-</span><span class="n">b</span><span class="o">&gt;</span> <span class="p">[</span><span class="o">&lt;</span><span class="n">outputpath</span><span class="o">&gt;</span><span class="p">]</span>
         <span class="n">Update</span> <span class="n">an</span> <span class="n">existing</span> <span class="n">collocation</span> <span class="n">result</span> <span class="n">file</span> <span class="n">by</span> <span class="n">checking</span> <span class="n">the</span>
         <span class="n">measurements</span> <span class="ow">in</span> <span class="n">two</span> <span class="n">sets</span> <span class="n">of</span> <span class="n">HARP</span> <span class="n">files</span> <span class="ow">and</span> <span class="n">only</span> <span class="n">keeping</span> <span class="n">pairs</span>
         <span class="k">for</span> <span class="n">which</span> <span class="n">measurements</span> <span class="n">still</span> <span class="n">exist</span>
